--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,10 +4,10 @@ stages {
     stage ('Docker build images') {
         steps {
             sh '''
-              docker build -t adservice -f /adservice/ .
+              docker build -t adservice:v1 -f /adservice/ .
+              docker build -t cartservice:v1 -f /cartservice/src/ .
 
         }
     }
-
- }
+}
 }
